# FunctionalMatch

./: pyproject.toml  requirements.txt
FunctionalMatch/: Match.py  PropositionalLogic.py
FunctionalMatch/rdf/: RDFGraph.py
